tests/snapshots/run_wpt_conformance__litert_pad_float16_4D_tensor_options_mode__reflection_.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
pad.https.any.js pad float16 4D tensor options.mode='reflection', litert
 pad :: pad float16 4D tensor options.mode='reflection': index 0: actual=0 expected=68.75 ulp=21580 tolerance=4
  inputs: padInput: [22.765625, -21.171875, -91.6875, 16.859375, 60.5, -70.5625, -60.65625, -47.875, 68.75]
  expected padOutput: [68.75, -47.875, -60.65625, -47.875, 68.75, -47.875, -60.65625, -70.5625, 60.5, 16.859375 ...] (len=49)
  actual padOutput: [0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ...] (len=49)
  expected padOutput full nd:
[68.75, -47.875, -60.65625, -47.875, 68.75, -47.875, -60.65625, -70.5625, 60.5, 16.859375, ...] (len=49, shape=[1, 7, 7, 1])
  actual padOutput full nd:
[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...] (len=49, shape=[1, 7, 7, 1])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    padInput: f16[1, 3, 3, 1];
  }

  nodes {
    [padOutput] = pad(padInput, label="", mode="reflection", value=null);
  }

  outputs { padOutput; }
}
